corrected last commit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://avokados.github.io/hws2",
+  "homepage":"https://avokados.github.io/ToDoList",
   "name": "1-lesson",
   "version": "0.1.0",
   "private": true,
